--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.1.0",
+    "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
+    "emotion": "^10.0.27",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.12.1",
+    "@types/react": "^16.9.55",
+    "babel-plugin-emotion": "^10.0.33",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
